fix positions
